--- a/src/index.html
+++ b/src/index.html
@@ -2,175 +2,193 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible"
-      content="ie=edge">
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="ie=edge"
+    >
     <title>HTML Form</title>
-    <link rel="stylesheet"
-      href="./style.css">
+    <link
+      rel="stylesheet"
+      href="./style.css"
+    >
   </head>
   <body>
     <form action="submit">
       <fieldset class="fieldset">
         <legend>Personal information</legend>
-
         <!-- /* surname */ -->
         <div class="input">
           <label for="surname">Surname:</label>
-          <input type="text"
+          <input
+            type="text"
             name="surname"
             id="surname"
             required
-            autocomplete="off">
+            autocomplete="off"
+          >
         </div>
-
-
         <!-- /* name */ -->
         <div class="input">
           <label for="name">Name:</label>
-          <input type="text"
+          <input
+            type="text"
             name="name"
             id="name"
             required
-            autocomplete="off">
+            autocomplete="off"
+          >
         </div>
-
-
         <!-- /* age */ -->
         <div class="input">
           <label for="age">How old are You?</label>
-          <input type="number"
+          <input
+            type="number"
             name="age"
             id="age"
             required
             min="1"
             max="100"
-            value="12">
+            value="12"
+          >
         </div>
-
-
         <!-- /* birthday */ -->
         <div class="input">
           <label for="birth">Full date of birth:</label>
-          <input type="date"
+          <input
+            type="date"
             name="birth"
             id="birth"
-            required>
+            required
+          >
         </div>
-
         <!-- /* accept */ -->
         <div class="input">
           <label for="accept">I accept the term of the agreement</label>
-          <input type="checkbox"
+          <input
+            type="checkbox"
             name="accept"
-            id="accept">
+            id="accept"
+          >
         </div>
       </fieldset>
-
       <fieldset class="fieldset">
         <legend>Registration</legend>
-
         <!-- /* email */ -->
         <div class="input">
           <label for="email">E-mail:</label>
-          <input type="email"
+          <input
+            type="email"
             name="email"
             id="email"
             placeholder="email@example.com"
-            required>
+            required
+          >
         </div>
-
         <!-- /* email */ -->
         <div class="input">
           <label for="password">Password:</label>
-          <input type="password"
+          <input
+            type="password"
             name="password"
             id="password"
             minlength="5"
             maxlength="25"
-            required>
+            required
+          >
         </div>
       </fieldset>
-
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-
         <!-- /* love cats? */ -->
         <div class="input">
-          Do you love cats?
+          <span>Do you love cats?</span>
           <label>
-            <input type="radio"
-              name="love_cats"
-              value="true"> Yes
+            <input
+              type="radio"
+              name="loveCats"
+              value="true"
+            >
+            <span>Yes</span>
           </label>
           <label>
-            <input type="radio"
-              name="love_cats"
-              value="false"> No
+            <input
+              type="radio"
+              name="loveCats"
+              value="false"
+            >
+            <span>Now</span>
           </label>
         </div>
-
         <!-- /* color */ -->
         <div class="input">
           <label for="color">What is your favorite color?</label>
-          <input type="color"
+          <input
+            type="color"
             name="color"
             id="color"
-            required>
+            required
+          >
         </div>
-
         <!-- /* time */ -->
         <div class="input">
           <label for="time">What time do you go to bed?</label>
-          <input type="time"
+          <input
+            type="time"
             name="time"
             id="time"
-            required>
+            required
+          >
         </div>
-
-        <!-- /* select */ -->
+        <!-- /* carBrand */ -->
         <div class="input">
-          <label for="select">What are your favorite brand of cars?</label>
-          <select name="select"
-            multiple>
+          <label for="carBrand">What are your favorite brand of cars?</label>
+          <select
+            name="carBrand"
+            multiple
+          >
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
             <option value="Lada">Lada</option>
           </select>
         </div>
-
         <!-- /* range */ -->
         <div class="input">
           <label for="range">How do you rate our work?</label>
-          <input type="range"
+          <input
+            type="range"
             name="range"
             id="range"
             min="0"
             max="100"
-            required>
+            required
+            value="10"
+          >
         </div>
       </fieldset>
-
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
-
-        <!-- /* email */ -->
+        <!-- /* comments */ -->
         <div class="input">
           <label for="comments">Comments:</label>
-          <textarea name="comments"
+          <textarea
+            name="comments"
             id="comments"
             cols="16"
             rows="2"
-            required></textarea>
-
+            required
+          ></textarea>
         </div>
-
-        <!-- /* email */ -->
+        <!-- /* recommend */ -->
         <div class="input">
           <label for="recommend">Would you recommend us?</label>
-          <select name="recommend"
-            required>
+          <select
+            name="recommend"
+            required
+          >
             <option value="yes">yes</option>
             <option value="no">no</option>
           </select>
@@ -178,7 +196,9 @@
       </fieldset>
       <button type="submit">Submit</button>
     </form>
-    <script type="text/javascript"
-      src="./main.js"></script>
+    <script
+      type="text/javascript"
+      src="./main.js"
+    ></script>
   </body>
 </html>
